--- a/package/package.json
+++ b/package/package.json
@@ -28,5 +28,9 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xydens/pumapi"
+  }
 }
