--- a/package/package.json
+++ b/package/package.json
@@ -8,7 +8,8 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc -p tsconfig.build.json",
+    "test": "jest"
   },
   "dependencies": {
     "@nestjs/common": "^8.3.1",
