--- a/package/package.json
+++ b/package/package.json
@@ -9,12 +9,19 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"{src,test}/**/*.ts\""
   },
   "dependencies": {
     "@nestjs/common": "^8.3.1",
     "@nestjs/core": "^8.3.1",
     "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-plugin-import": "^2.25.4",
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "json-to-pretty-yaml": "^1.2.2",
