--- a/package/package.json
+++ b/package/package.json
@@ -2,6 +2,7 @@
   "name": "pumapi",
   "version": "0.2.0",
   "license": "MIT",
+  "homepage": "https://github.com/xydens/pumapi",
   "devDependencies": {
     "@types/ramda": "^0.28.0",
     "ts-jest": "^27.1.3",
